javali_tests/A3/A4_keinestamSchmid/fail/Error.2.2.1.INVALID.START.POINT.2.javali
// Rule 2.2.1: There exists a class Main with a method main.
// missing main
class Main {
	void man() {
		int i;
	}
}


